--- a/content/intro/intro.tex
+++ b/content/intro/intro.tex
@@ -15,7 +15,7 @@ In this manner, \ac{us} screening is estimated to be able to reduce
 between $65\sim85\%$ of unnecessary biopsies~\cite{yuan2010multimodality}, in favour of a less traumatic short-term screening follow-up using \ac{bus} images.
 As the standard for assessing this \ac{bus} images, the \ac{acr} proposes the \ac{birads} lexicon for \ac{bus} images~\cite{biradsus}.
 This \ac{us} \ac{birads} lexicon is a set of standard markers that characterizes the lesions encoding the visual cues found in \ac{bus} images and facilitates their analysis.
-Further details regarding the \ac{us} \ac{birads} lexicon descriptors proposed by the \ac{acr}, can be found in this document in \cref{sec:method:dterm:feat}, where visual cues of \ac{bus} images and breast structures are discussed to define feature descriptors.
+Further details regarding the \ac{us} \ac{birads} lexicon descriptors proposed by the \ac{acr}, can be found in this document in Sect.\,\ref{sec:method:dterm:feat}, where visual cues of \ac{bus} images and breast structures are discussed to define feature descriptors.
 
 The incorporation of \ac{us} in screening policies and the origin of clinically standardized image assessing like the \ac{us} \ac{birads} lexicon, encourages the development of \ac{cad} systems using \ac{us} to be applied to breast cancer diagnosis.
 However this clinical already validated and in use are not directly applicable to \ac{cad} systems development. 
