Close the introduction

--- a/content/intro/intro.tex
+++ b/content/intro/intro.tex
@@ -17,8 +17,8 @@ As the standard for assessing this \ac{bus} images, the \ac{acr} proposes the \a
 This \ac{us} \ac{birads} lexicon is a set of standard markers that characterizes the lesions encoding the visual cues found in \ac{bus} images and facilitates their analysis.
 Further details regarding the \ac{us} \ac{birads} lexicon descriptors proposed by the \ac{acr}, can be found in this document in Sect.\,\ref{sec:method:dterm:feat}, where visual cues of \ac{bus} images and breast structures are discussed to define feature descriptors.
 
-The incorporation of \ac{us} in screening policies and the origin of clinically standardized image assessing like the \ac{us} \ac{birads} lexicon, encourages the development of \ac{cad} systems using \ac{us} to be applied to breast cancer diagnosis.
-However this clinical already validated and in use are not directly applicable to \ac{cad} systems development. 
+The incorporation of \ac{us} in screening policies and the emergence of clinical standards to assess image like the \ac{us} \ac{birads} lexicon, encourage the development of \ac{cad} systems using \ac{us} to be applied to breast cancer diagnosis.
+However, this clinical assessment lexicon are not directly applicable to \ac{cad} systems. 
 Shortcomings like the location and explicit delineation of the lesions need to be addressed, since those tasks are intrinsically carried out by the radiologists during their visual assessment of the images to infer the lexicon representation of the lesions.
 Therefore, developing accurate segmentation methodologies for breast lesions and structures are crucial to take advantage of this already validated clinical tools.
 
@@ -29,7 +29,7 @@ Therefore, developing accurate segmentation methodologies for breast lesions and
 %Therefore the interest from the medical imaging community, also for the specific case of breast lesion assessment using \ac{us} data, in developing \ac{cad} systems that provide better instrumentation to improve image interpretation, and consequently achieve better diagnosis.
 
 This article proposes a highly modular and flexible framework for segmenting lesions and tissues present in \ac{bus} images.
-The proposal takes advantage of an energy-based strategy to perform segmentations based on discrete optimizations using super-pixels and a set of novel features analogous to the elements encoded by the \ac{us} \ac{birads} lexicon~\cite{biradsus}.
+The proposal takes advantage of an energy-based strategy to perform segmentation based on discrete optimization using super-pixels and a set of novel features analogous to the elements encoded by the \ac{us} \ac{birads} lexicon~\cite{biradsus}.
 
 %%% Local Variables: 
 %%% mode: latex
