--- a/master.tex
+++ b/master.tex
@@ -17,7 +17,9 @@
 \acresetall  % reset the acronyms from the title (if any)
 Since breast cancer remains the leading cause of cancer death among female population world-wide, any attempt to create tools for assisting radiologists during the process of diagnosing is necessary.
 However, most of the technology developed in the imaging laboratories are expelled from this process by clinicians only because these technologies are not founded on the already existing clinical findings and procedures.
-This article renders accurate delineation of the breast structures and lesions as the missing step for developing \ac{cad} systems that take advantage of the clinical findings already adopted by the clinicians.
+
+We argue that in order to build \ac{cad} systems that take take advantage of the clinical findings already adopted by the clinicians,
+strategies to accurately delineate the breast structures and its lesions are the missing piece of puzzle.
 
 Therefore, a highly modular and flexible framework for segmenting breast tissues and lesions present in \ac{bus} images using optimization strategies and high-level descriptors designed analogously to the visual cues used by radiologists is here proposed.
 \end{abstract}
