--- a/content/method/method.tex
+++ b/content/method/method.tex
@@ -14,7 +14,7 @@ and (3) a re-mapping the labels obtained from the previous stage to produce the 
   \centering
   \includegraphics[width=0.9\linewidth]{method}
   \caption{Conceptual block representation of the segmentation methodology.
-    %\footnote{\cref{fig:methodterms} illustrates the $\mathcal{S}$, $D(\cdot)$, and $V(\cdot)$ for the applied case of delineating breast structures in \ac{us} data.}
+    %\footnote{\cref{fig:methodTerms} illustrates the $\mathcal{S}$, $D(\cdot)$, and $V(\cdot)$ for the applied case of delineating breast structures in \ac{us} data.}
     %\footnote{(todo:add all the names of the elements in the figure)}
   }
   \label{fig:method}
@@ -42,25 +42,23 @@ Equation~\eqref{eq:labelingeq} describes this cost function as the combination o
 
 Where, the left hand side of the expression integrates the so-called \emph{data} term, while the right hand side integrates the \emph{pairwise} term, which is also referred as the \emph{smoothing} term.
 Both terms are shaped by $\mathcal{S}$ and evaluated in the labelling space $\mathcal{W}$.
-
-{\color{red}In our quest to optimize the cost function $U(\cdot)$, it is required to define a representation for the set $\mathcal{S}$, a data term $D(\cdot)$, a pairwise term $V(\cdot)$, and a proper minimization methodology.}
+%
+In our quest to optimize the cost function $U(\cdot)$, it is required to define a representation for the set $\mathcal{S}$, a data term $D(\cdot)$, a pairwise term $V(\cdot)$, and a proper minimization methodology.
 
 \paragraph{The set $\mathcal{S}$}
-that represents the image can be, in general, any discrete set representing the image (i.e.\, pixels, overlapping or non overlapping windows, super-pixels, etc.). 
+can be, in general, any discrete set representing the image (i.e.\, pixels, overlapping or non overlapping windows, super-pixels, etc.). 
 
-\paragraph{The data term} \label{sec:method:dataTerm}
-, given a label configuration $\omega \in \mathcal{W}$, penalizes the labelling of a particular image element or site ($\omega_s = l$) based on the data associated to $s$.
+\paragraph{The data term $D(\cdot)$,} \label{sec:method:dataTerm}
+given a label configuration $\omega \in \mathcal{W}$, penalizes the labelling of a particular image element or site ($\omega_s = l$) based on the data associated to $s$.
 In this manner, $D_s(\omega_s=l_\cmark) << D_s(\omega_s=l_\xmark)$.
-
+Figure~\ref{fig:methodTerms}b illustrates the data cost associated to some arbitrary labelling configurations to clarify the desired effect (or behaviour) of this data term.
 Designing an obscure heuristic to comply with the desired behaviour of $D(\cdot)$ out of the box, is rather a complicated task.
-{\color{blue}
-Therefore, an easier and cleaner approach is to take advantage of \ac{ml} techniques to design this data cost in a systematic manner based on a training stage. 
-The idea is to generate a data model for each label (or class) in $\mathcal{L}$ from training samples, and let $D(\cdot)$ be a distance or goodness measure reflecting the likelihood for $s$ to belong to class $l$.
-Different features to represent the data, custom construction of the data models by using different classifiers, training techniques or including arbitrary constraints; can be used to achieve the desired data term without changing the overall scheme.}
+Therefore, an easier and cleaner approach is to design this data term $D(\cdot)$ with the help of \ac{ml} because it provides a systematic process that is flexible enough to encode any desired behaviour based on a training stage.
+This concept is in fact depicted in the upper row in Fig.\,\ref{fig:method}.
+For each site $s \in \mathcal{S}$, features describing $s$ are designed. Then, different optional steps can be applied to this set of feature: (i) features normalization, (ii) features selection or (iii) features extraction. Finally, the data term $D(\cdot)$ is encoded based on \ac{ml} classifiers, the features and a training step.
+Thus, the data term $D(\cdot)$ can be seen as a distance or goodness measure reflecting the likelihood for $s$ to belong to class $l$.
 
-{\color{red} Defining the data term $D(\cdot)$ with the help of \ac{ml} follows a systematic process that is flexible enough to encode any desired behaviour based on a training stage.  This representation is in fact depicted in the upper row in Fig.\,\ref{fig:method}.  For each site $s \in \mathcal{S}$, features describing $s$ are designed. Then, different optional steps can be applied to this set of feature: (i) features normalization, (ii) features selection or (iii) features extraction. Finally, the data term $D(\cdot)$ is encoded based on \ac{ml} classifiers, the features and a training step. }
-
-\paragraph{The pairwise term} \label{sec:method:mrfTerm}
+\paragraph{The pairwise term $V(\cdot,\cdot)$} \label{sec:method:mrfTerm}
 %The pairwise term 
 represents the cost associated to $\omega_s$ taking into account the labels of its neighbour sites, $\omega_r$, $r \in \mathcal{N}_{s}$. 
 This term models a \ac{mrf} or a \ac{crf}.
@@ -75,6 +73,9 @@ V_{s,r}(\omega_s,\omega_r) =
 \label{eq:smoothing}
 \end{equation}
 
+Figure~\ref{fig:methodTerms}c shows a visual interpretation of this cost.
+The more fragmented is the segmentation $\omega$, the higher the overall pairwise term; since every boundary brings a penalization $\beta$ to the total cost $U(\omega)$.
+In this manner the regularization term can be seen as a post-processing or denoising stage since that some sites will flip their labelling if the cost of fragmenting the regions is larger than the cost of adopting their neighbour's label. 
 
 % Review %contribute have different or variable costs (see \cref{fig:methodTerms:boundary}) are also possible by taking into account not only relations in $\mathcal{S}$ of but also image information (see \cref{fig:method}). 
 %Further details can be found in \cref{sec:smoothing}.
@@ -84,6 +85,32 @@ is determined by the nature of $U(\cdot)$ and $\mathcal{W}$, since not all the m
 The size of the labelling space $|\mathcal{W}|=|\mathcal{L}|^{|\mathcal{S}|}$, discontinuities in $U(\omega)$ due to $\mathcal{W}$ or the problem of local minima, 
 along with all the particular constrains of all the different minimization methodology.
 Need to be taken into account while choosing the most desirable minimization strategy.
+
+\begin{figure}[t]
+    \centering
+    \begin{subfigure}[b]{0.19\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{problem}
+        %\caption{{\small Problem definition}}    
+        \label{fig:methodTerms:problem}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.39\textwidth}  
+        \centering 
+        \includegraphics[width=\textwidth]{data}
+        %\caption[]% {{\small Data term}}    
+        \label{fig:methodTerms:data}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.39\textwidth}   
+        \centering 
+        \includegraphics[width=\textwidth]{smooth} 
+        %\caption[]% {{\small Pairwise term }}
+        \label{fig:methodTerms:boundary}
+    \end{subfigure}
+    \caption {\small Methodology: (a) Problem definition, (b) Data term, (c) Pairwise term.} 
+    \label{fig:methodTerms}
+\end{figure}
 
 %%% Local Variables: 
 %%% mode: latex
